--- a/Front/frontMusic/src/pages/Content/Artist/NavBar/Discography/Discography.module.css
+++ b/Front/frontMusic/src/pages/Content/Artist/NavBar/Discography/Discography.module.css
@@ -3,6 +3,10 @@
     gap: 3rem;
 }
 
+.artistContent.column {
+    flex-direction: column;
+}
+
 .artistContent a {
     display: flex;
     align-items: center;
@@ -105,9 +109,28 @@
     margin: 0;
 }
 
-#data {
-    color: #a2a2ad;  
-    margin-block-start: 0em;
-    margin-block-end: 0em;  
-    margin-bottom: 1rem;
+.subtitle {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.subtitle h1 {
+    font-size: 24px;
+}
+
+.subtitle #line {
+    width: 100%;
+    height: 2px;
+    background-color: var(--dark-gray-two);
+    border-radius: 5px;
+}
+
+.musicList {
+    display: grid; 
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.musicList li {
+    margin-bottom: 3rem;
 }
