--- a/Front/frontMusic/src/components/Cards/AddArtist Card/AddArtist.module.css
+++ b/Front/frontMusic/src/components/Cards/AddArtist Card/AddArtist.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     position: relative;
+    gap: 5px;
 }
 
 .artistImage img {
@@ -10,8 +11,6 @@
     height: 200px;
     border-radius: 200px;
     cursor: pointer;
-    object-fit: cover;
-    object-position: center;
 }
 
 .remove {
@@ -42,6 +41,37 @@
 
 .artistImage p {
     font-size: 15px;
-    color: #fff;
-    font-weight: 400;
+    text-align: center;
+}
+
+@media screen and (max-width: 1340px) {
+    .artistImage img,
+    .opacity {
+        width: 150px;
+        height: 150px;
+    }
+}
+
+@media screen and (max-width: 940px) {
+    .artistImage img,
+    .opacity {
+        width: 100px;
+        height: 100px;
+    }
+
+    .artistImage p {
+        font-size: 13px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .artistImage img,
+    .opacity {
+        width: 70px;
+        height: 70px;
+    }
+
+    .artistImage p {
+        font-size: 12px;
+    }
 }
