--- a/Front/frontMusic/src/components/Modals/Notification/Notification.module.css
+++ b/Front/frontMusic/src/components/Modals/Notification/Notification.module.css
@@ -1,23 +1,22 @@
 .section {
-    height: calc(100vh - 56px - 80px - 40px);
-    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.notification {
-    border-bottom: 1px solid #32323d;
-    padding: 0 20px;
-}
-
-.notification p {
-    font-weight: bold;
-    font-size: 16px;
+#notification {
+    padding: 1rem 0;
+    font-size: 18px;
 }
 
 .addArtist {
+    width: 100%;
+    border-top: var(--dark-gray-two) 1px solid;
     padding: 10px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
 }
 
 .addArtist img {
@@ -27,4 +26,21 @@
 
 .addArtist p {
     font-size: 14px;
+}
+
+
+@media screen and (max-width: 600px) {
+    #notification {
+        padding: .5rem 0;
+        font-size: 14px;
+    }
+
+    .addArtist img {
+        width: 40px;
+        height: 40px;
+    }
+    
+    .addArtist p {
+        font-size: 12px;
+    }
 }
