Correção no ScreenReister

--- a/Front/frontMusic/src/components/Button/Button.module.css
+++ b/Front/frontMusic/src/components/Button/Button.module.css
@@ -47,7 +47,7 @@
 }
 
 .solid_white:hover {
-    background-color: var(--transparent-white);
+    background-color: #ffffffc2;
 }
 
 /* Não vi uso ainda 
