--- a/Front/frontMusic/src/pages/Content/Favoritos/Favorite.module.css
+++ b/Front/frontMusic/src/pages/Content/Favoritos/Favorite.module.css
@@ -13,6 +13,7 @@
 
 .profile img {
     width: 220px;
+    height: 220px;
     border-radius: 200px;
     object-fit: cover;
     object-position: center;
