--- a/Front/frontMusic/src/common/reset.css
+++ b/Front/frontMusic/src/common/reset.css
@@ -101,3 +101,10 @@ input {
     outline: none;
     width: 100%;
 }
+
+label {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--gray-two);
+}
