--- a/Front/frontMusic/src/components/Cards/Playlist Card/PlaylistCard.module.css
+++ b/Front/frontMusic/src/components/Cards/Playlist Card/PlaylistCard.module.css
@@ -1,22 +1,20 @@
 .card {
-    width: 264px;
     gap: 5px;
 }
 
-.card div {
-    color: #fff;
-    font-size: 16px;
-    font-weight: 500;
+.card h2 {
+    font-size: 18px;
+    letter-spacing: 2px;
 }
 
 .card span {
-    color: #a2a2ad;
+    color: var(--gray-two);
     font-size: 13px;
-    font-weight: 500;
 }
 
 .image {
     height: 264px;
+    width: 264px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -27,10 +25,13 @@
 }
 
 .image img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
     border-radius: 5px;
     position: absolute;
     transition: 400ms;
-    position: absolute;
 }
 
 .image img:hover{
@@ -39,13 +40,10 @@
 
 .image button {
     z-index: 2;
-    cursor: pointer;
     margin: 20px;
-    width: 50px;
-    height: 50px;
-    border-radius: 100px;
-    border: none;
-    place-items: center;
+    width: 40px;
+    height: 40px;
+    background-color: var(--white-one);
 }
 
 .add {
@@ -54,9 +52,4 @@
 
 .remove {
     display: none;
-}
-
-.image button svg {
-    width: 18px;
-    height: 18px;
 }
